--- a/public_html/about.html
+++ b/public_html/about.html
@@ -50,10 +50,10 @@
                         <a class="nav-link text-uppercase text-expanded" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active px-lg-4">
-                        <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+                        <a class="nav-link text-uppercase text-expanded" href="about.html">Bio</a>
                     </li>
                     <li class="nav-item px-lg-4">
-                        <a class="nav-link text-uppercase text-expanded" href="blog.html">Blog</a>
+                        <a class="nav-link text-uppercase text-expanded" href="blog.html">Work</a>
                     </li>
                     <li class="nav-item px-lg-4">
                         <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
