--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,13 +53,13 @@
             <div class="collapse navbar-collapse" id="navbarExample">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item active px-lg-4">
-                        <a class="nav-link text-uppercase text-expanded" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-uppercase text-expanded" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item px-lg-4">
-                        <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
+                        <a class="nav-link text-uppercase text-expanded" href="about.html">Bio</a>
                     </li>
                     <li class="nav-item px-lg-4">
-                        <a class="nav-link text-uppercase text-expanded" href="blog.html">Blog</a>
+                        <a class="nav-link text-uppercase text-expanded" href="blog.html">Work</a>
                     </li>
                     <li class="nav-item px-lg-4">
                         <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
